Add initial pages for About and Blog sections in Astro tutorial

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,47 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro Blog Tutorial</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width"
+    />
+    <meta
+      name="generator"
+      content={Astro.generator}
+    />
+    <title>Astro</title>
+  </head>
+  <body>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
+    <h1>Homepage</h1>
+		<h2>Welcome to my new Astro site!</h2>
+
+		<p>
+			I am working through Astro's
+			introductory tutorial. This is the
+			first page on my website, and
+			it's the first one I built myself!
+		</p>
+
+		<p>
+			This site will update as I
+			complete more of the tutorial, so
+			keep checking back and see how my
+			journey is going!
+		</p>
+		<p>
+			And if you want to see the code
+			for this site, check out my
+			<a href="https://github.com/Bias93/astro-blog-tutorial" target="_blank">GitHub</a>!
+		</p>
+  </body>
 </html>
